<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/l_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_button"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_search"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:hint="@string/kitaphana"
                android:textColorHint="@color/blue"
                android:textSize="17dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/l_book"
            android:background="@drawable/book_rounded"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_margin="20dp">
            <TextView
                android:id="@+id/txt_reading"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="@string/oqyluda"
                android:background="@drawable/rounded_button_biblioteka"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/txt_want"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:text="@string/qalaimyn"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/txt_read"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/blue"
                android:text="@string/oqylgan"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_biblioteka_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</LinearLayout>