<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/paraqsha"
            android:textColor="@color/black"
            android:textSize="34dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRAdius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="23dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:text="Кеңес Диас Абдісеитұлы"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="dias.abdysseituly@gmail.com"
                        android:textColor="@color/white"
                        android:textSize="18dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_centerInParent="true">

            </RelativeLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:layout_centerHorizontal="true"
                android:elevation="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/just"
                app:shapeAppearanceOverlay="@style/CircleImage" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/settings_rounded"
            android:orientation="horizontal"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/baptaular"
                android:textColor="@color/black"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/settings_rounded"
            android:orientation="horizontal"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@drawable/date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/qalgan_kun"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:gravity="right"
                android:text="15 книгу"
                android:textColor="@color/blue"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/settings_rounded"
            android:orientation="horizontal"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@drawable/pages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/normativti_bet_sany"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:gravity="right"
                android:text="35 книгу"
                android:textColor="@color/blue"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/settings_rounded"
            android:orientation="horizontal"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@drawable/question" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/komek"
                android:textColor="@color/black"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>