<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/l_search"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/rounded_button"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_search"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/blue"
                        android:hint="@string/ganrlar"
                        android:textColorHint="@color/blue"
                        android:textSize="17dp"
                        android:background="@android:color/transparent"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/txt_genre"
                    android:layout_below="@id/l_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    android:text="@string/ganrlar"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:id="@+id/txt_genre_vse"
                    android:layout_below="@id/l_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/blue"
                    android:text="@string/barlygy"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"/>
                <LinearLayout
                    android:id="@+id/l_genre"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@id/txt_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/ll_detective_genre"
                        android:layout_weight="1"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/rounded_button">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Детективы"
                            android:textSize="15dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_adventure_genre"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:background="@drawable/rounded_button">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Приключения"
                            android:textSize="15dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_fairy_tails_genre"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:background="@drawable/rounded_button">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Сказки"
                            android:textSize="15dp"
                            android:textColor="@color/blue"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/txt_tanymal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="22dp"
                    android:layout_below="@id/l_genre"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tanymal"/>
                <TextView
                    android:id="@+id/txt_tanymal_barlygy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:gravity="right"
                    android:textSize="15dp"
                    android:layout_below="@id/l_genre"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/barlygy"/>
                <HorizontalScrollView
                    android:id="@+id/scroll_popularnoe"
                    android:layout_below="@id/txt_tanymal"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/kitap"
                            android:layout_marginLeft="15dp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/kitap2"
                            android:layout_marginLeft="15dp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/kitap3" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/kitap4"
                            android:layout_marginRight="15dp"/>

                    </LinearLayout>
                </HorizontalScrollView>
                <TextView
                    android:id="@+id/txt_zhana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jana"
                    android:textSize="22dp"
                    android:textColor="@color/black"
                    android:layout_below="@id/scroll_popularnoe"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"/>
                <TextView
                    android:id="@+id/txt_zhana_barlygy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:gravity="right"
                    android:textSize="15dp"
                    android:layout_below="@id/scroll_popularnoe"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/barlygy"/>
                <HorizontalScrollView
                    android:id="@+id/scroll_novoe"
                    android:layout_below="@id/txt_zhana"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/kitap5"
                            android:layout_marginLeft="15dp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/kitap6"
                            android:layout_marginLeft="15dp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/kitap7" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/kitap8"
                            android:layout_marginRight="15dp"/>

                    </LinearLayout>
                </HorizontalScrollView>
            </RelativeLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>